openshiftnew_frontend/angular-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yaml --provider=openshift
    kompose.version: 1.17.0 (a74acad)
  creationTimestamp: null
  labels:
    io.kompose.service: angular
  name: angular
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 4200
  selector:
    io.kompose.service: angular
status:
  loadBalancer: {}
